# thought-transfer

./: LICENSE  README.md  pyproject.toml
installation/conda-osx-arm64-mps/: README.md  environment.yml  update-env-file.sh
installation/docker-amd64-cuda/: README.md  template.sh
installation/docker-amd64-cuda/EPFL-SCITAS-setup/: README.md
installation/docker-amd64-cuda/EPFL-SCITAS-setup/template-submit-examples/: minimal.sh  remote-development.sh  unattended-distributed.sh  unattended.sh
installation/docker-amd64-cuda/EPFL-runai-setup/: README.md
installation/docker-amd64-cuda/EPFL-runai-setup/template-submit-examples/: first-steps.sh  minimal.sh  remote-development.sh  unattended.sh
installation/docker-amd64-cuda/from-scratch-template/: environment.yml
reproducibility-scripts/: template-experiment.sh  template-sweep.yaml
src/: data_playground.ipynb  final_playground.ipynb  model_playground.ipynb  playground.ipynb  train_playground.ipynb
src/thought_transfer/: collect_data.py  sparse_recoder.py  template_experiment.py  train.py
src/thought_transfer/configs/: setup.yaml
src/thought_transfer/utils/: __init__.py
template/: template-variables.env
