[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thought-transfer"
readme = "README.md"
license = { file = "LICENSE" }
version = "0.0.1"
requires-python = ">=3.10"

[tool.hatch.build.targets.wheel]
packages = ["src/thought_transfer"]

[tool.isort]
known_third_party = ["wandb"]
